styles.css
body {
    font-family: "Raleway", sans-serif;
    margin: 0;
}

.wrapper {
    max-width: 1024px;
    margin: auto;
}

h1 {
    margin-bottom: 0;
    margin-top: 40px;
    
}

h2 {
    margin-top: 0;
}

h3 {
    margin-bottom: 25px;
}

/*HEADER*/

header {
    padding-top: 18px;
}

nav {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    width: 100%;
}

nav ul {
    display: flex;
    flex-wrap: nowrap;
    list-style: none;
    margin: 0;
    padding: 0;
}

nav img {
    height: 60px;
}

nav li {
    text-align: center;
}

a.bouton1 {
    text-decoration: none;
    color: black;
    padding: 37px;
}

a.bouton1:visited {
    color: black;
}

a.bouton1:hover {
    border-top: #0065FC solid;
    border-width: 2px;
    padding: 37px;
    color: #0065FC;
}

a.bouton1:active {
    color: #0065FC;
}

a.inscriremobile {
    display: none;
}

a.inscrire {
    text-decoration: none;
    font-weight: bold;
    color: #0065FC;
    width: 100%;
    padding: 30px;
}

a.inscrire:visited {
    color: #0065FC;
    font-weight: bolder;
}

/*Section recherche*/

#recherche {
    margin-top: 30px;
    margin-bottom: 30px;
    display: flex;  
    flex-wrap: nowrap;
}

#recherche i {
    border: 15px solid transparent;
    border-radius: 10px 0 0 10px;
    background-color: #F2F2F2;
    float: left;
    padding-left: 2px;
    padding-right: 2px;
}

#barre {
    font-size: 20px;
    float: left;
    color: black;
    height: 46px;
    border: #F2F2F2 solid;
    border-width: 1px;
    outline: none;
    padding-left: 20px;
    padding-right: 10px;
}

#boutonrecherche {
    background-color: #0065FC;
    float: left;
    color: white;
    height: 46px;
    width: 100px;
    border: 15px solid;
    border-radius: 0 10px 10px 0;
    border: transparent;
    font-weight: bold;
    font-size: 14px;
}

#boutonrecherche:active {
    transform: scale(0.9);
}

#boutonrecherche i {
    display: none;
}

/*Filtres*/

#filtres {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    align-items: center;
}

#filtres i {
    margin-left: -3px;
    color:#0065FC;
    border: 10px solid;
    border-radius: 50%;
    border-color: transparent;
    background-color: #DEEBFF;
}

#filtres p {
    font-weight: bolder;
}

#filtres div {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
}

#filtres h2 {
    margin: 0 15px 0 10px;
}
a.bouton2 {
    display: flex;
    align-items: center;
    border: black solid 1px;
    border-radius: 20px 20px 20px 20px;
    border-color: #DEEBFF ;
    border-left-color: transparent;
    height: 35px;
    text-decoration: none;
    color: black;
    margin-left: 20px;
}

a.bouton2 p {
    padding: 15px;
}

a.bouton2:hover {
    background-color: #0065FC;
    color: white;
    transform: scale(1.1);
}

a.bouton2:active {
    transform: scale(0.9);
}

#information {
    display: flex;
    align-items: center;
    margin-bottom: 30px;
    margin-top: 30px;
}

#information div {
    display: flex;
    align-items: center;
    justify-content: center;
    border: 2px solid;
    border-color: #F2F2F2;
    border-radius: 50%;
    margin-right: 10px;
    width: 25px;
    height: 25px;
}

#information i {
    color: #0065FC;
    background-color:white;
}

/*Section hébergements et populaires*/

#propositions {
    display: flex;
    justify-content: space-between;
    flex-direction: row;
    width: 100%;
    object-fit: cover;
    margin-bottom: 35px;
}

/*Hébergements*/

#presentation {
    display: flex;
    flex-wrap: wrap;
    background-color:#F2F2F2;
    border-radius: 20px 20px 20px 20px;
    margin-right: 25px;
    width: 75%;
    padding: 25px;
}

#vignettes {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-between;
    height: 450px;
}

a.images {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    border: transparent solid;
    background-color: white;
    border-radius: 20px 20px 20px 20px;
    text-decoration: none;
    color: black;
    box-shadow: 0 0 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
    width: 30.5%;
    height: 43%;
    padding-bottom: 5px;
}

a.images img {
    width: 98%;
    height: 60%;
    border: white solid;
    border-radius: 20px 20px 0 0;
    object-fit: cover;
}

a.images:hover {
    transform: scale(1.05);
}

a.images:active {
    transform: scale(0.9);
}

.description {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 97%;
    height: 40%;
    padding : 5px;
    margin-left: 5px;
}

.description p {
    margin: 0;
    line-height: 1.5;
}

.description span {
    font-weight: bold;
}

.titrehébergement {
    font-weight: bolder;
}

#presentation h3 a {
    text-decoration: none;
    color: black;
}
 
.etoiles {
    display: flex;
    flex-direction: row;
    bottom: 0;
}

.etoilespleines {
    color: #0065FC;
}

.etoilesvides {
    color: rgb(194, 193, 193);
    margin-left: 3px;
}

.plus {
    text-decoration: none;
    color: black;
    font-weight: bolder;
    margin-top: 10px;
    margin-bottom: 20px;
}

/*Populaires*/

#populaires {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    background-color:#F2F2F2;
    align-items: center;
    width: 30%;
    border-radius: 20px 20px 20px 20px;
    padding: 25px;
}

.descriptionpop {
    display: flex;
    flex-direction: column;
    padding: 10px;
    width: 60%;
    justify-content: space-between;
}

.descriptionpop p {
    line-height: 1.5;
    margin: 0;
}

#entete {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

#entete i{
    margin-bottom: 20px;
}

#popmobile {
    display: flex;
    flex-direction: column;
    width: 100%;
    justify-content: space-between;
    margin-bottom: 20px;
}
/* ... */

